--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.edu.utfpr.cm</groupId>
-    <artifactId>Minerador</artifactId>
+    <groupId>br.edu.utfpr</groupId>
+    <artifactId>BichoVsCVSAnalY</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Minerador</name>
+    <name>BichoVsCVSAnalY</name>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
